--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "glob": "^7.1.2",
+    "http": "0.0.0",
+    "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
     "path": "^0.12.7",
     "pg": "^7.4.3",
