--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node server.js"
+    "serve:development": "NODE_ENV=development node server.js",
+    "serve:production": "NODE_ENV=production node server.js"
   },
   "author": "",
   "license": "ISC",
