--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.10",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-nodemon": "^2.2.1"
   }
 }
