--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,6 @@
 const path = require('path');
 
 module.exports = {
-  "models-path": path.resolve('./server/models'),
+  "models-path": path.resolve('./server/sequelize'),
   "migrations-path": path.resolve('./server/migrations')
 };
