--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "gulp-exec": "^3.0.1",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-nodemon": "^2.2.1"
+    "gulp-nodemon": "^2.2.1",
+    "sequelize-cli": "^4.0.0"
   }
 }
