--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
-    "glob": "^7.1.2",
     "http": "0.0.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
-    "path": "^0.12.7",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.37.10",
-    "underscore": "^1.9.1"
+    "sequelize": "^4.37.10"
   },
   "devDependencies": {
+    "glob": "^7.1.2",
     "gulp-exec": "^3.0.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-nodemon": "^2.2.1",
-    "sequelize-cli": "^4.0.0"
+    "path": "^0.12.7",
+    "sequelize-cli": "^4.0.0",
+    "underscore": "^1.9.1"
   }
 }
